--- a/index.html
+++ b/index.html
@@ -22,75 +22,77 @@
     <section class="flex justify-center mx-auto">
         <div
             class="w-[400px] border-2 border-black p-4 mt-20 rounded-lg bg-slate-600 flex flex-col justify-center items-center">
-            <div
-                class="border-2 border-black rounded-md p-2 h-20 bg-slate-200 w-full text-black flex items-center justify-center font-bold">
-                SCREEN
+            <div id="calc_screen"
+                class="border-2 border-black rounded-md p-2 h-24 bg-slate-200 w-full text-black flex items-center justify-center font-bold">
+                
             </div>
 
-            <div class="mt-5 grid grid-cols-4 w-full gap-3">
-                <div
+            <div id="calc_keys" class="mt-5 grid grid-cols-4 w-full gap-3">
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    C</div>
-                <div
+                    C</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    (</div>
-                <div
+                    (</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    )</div>
-                <div
+                    )</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    ÷</div>
-                <div
+                    ÷</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    7</div>
-                <div
+                    7</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    8</div>
-                <div
+                    8</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    9</div>
-                <div
+                    9</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    x</div>
-                <div
+                    x</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    4</div>
-                <div
+                    4</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    5</div>
-                <div
+                    5</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    6</div>
-                <div
+                    6</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    -</div>
-                <div
+                    -</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    1</div>
-                <div
+                    1</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    2</div>
-                <div
+                    2</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    3</div>
-                <div
+                    3</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    +</div>
-                <div
+                    +</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    %</div>
-                <div
+                    %</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    0</div>
-                <div
+                    0</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    .</div>
-                <div
+                    .</button>
+                <button
                     class="w-20 border-2 border-slate-400 bg-slate-400 text-center text-2xl font-semibold rounded-lg neon-hover h-10 flex justify-center items-center">
-                    =</div>
+                    =</button>
             </div>
         </div>
     </section>
+
+    <script src="./js/custom.js"></script>
 </body>
 
 </html>
