Try Catch Block added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div
             class="w-[400px] border-2 border-black p-4 mt-20 rounded-lg bg-slate-600 flex flex-col justify-center items-center">
             <div id="calc_screen"
-                class="border-2 border-black rounded-md p-2 h-24 bg-slate-200 w-full text-black flex items-center justify-center font-bold">
+                class="border-2 border-black rounded-md p-2 h-24 bg-slate-200 w-full text-black text-2xl flex items-center justify-center font-bold">
                 
             </div>
 
